logs/dag_id=load_kpi_view_dag/run_id=scheduled__2022-11-22T00:00:00+00:00/task_id=create_landing_table/attempt=1.log
[2022-11-23T13:00:02.403+1300] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: load_kpi_view_dag.create_landing_table scheduled__2022-11-22T00:00:00+00:00 [queued]>
[2022-11-23T13:00:02.414+1300] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: load_kpi_view_dag.create_landing_table scheduled__2022-11-22T00:00:00+00:00 [queued]>
[2022-11-23T13:00:02.414+1300] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2022-11-23T13:00:02.414+1300] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2022-11-23T13:00:02.414+1300] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2022-11-23T13:00:02.427+1300] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): create_landing_table> on 2022-11-22 00:00:00+00:00
[2022-11-23T13:00:02.434+1300] {standard_task_runner.py:55} INFO - Started process 16830 to run task
[2022-11-23T13:00:02.438+1300] {standard_task_runner.py:82} INFO - Running: ['airflow', 'tasks', 'run', 'load_kpi_view_dag', 'create_landing_table', 'scheduled__2022-11-22T00:00:00+00:00', '--job-id', '41', '--raw', '--subdir', 'DAGS_FOLDER/load_kpi_view.py', '--cfg-path', '/var/folders/xc/5xlsywvn2n5d0_ty56lp12y80000gp/T/tmpo_zd8i33']
[2022-11-23T13:00:02.440+1300] {standard_task_runner.py:83} INFO - Job 41: Subtask create_landing_table
[2022-11-23T13:00:02.619+1300] {task_command.py:376} INFO - Running <TaskInstance: load_kpi_view_dag.create_landing_table scheduled__2022-11-22T00:00:00+00:00 [running]> on host macbook-pro
[2022-11-23T13:00:02.703+1300] {taskinstance.py:1590} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=airflow
AIRFLOW_CTX_DAG_ID=load_kpi_view_dag
AIRFLOW_CTX_TASK_ID=create_landing_table
AIRFLOW_CTX_EXECUTION_DATE=2022-11-22T00:00:00+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2022-11-22T00:00:00+00:00
[2022-11-23T13:00:02.716+1300] {base.py:71} INFO - Using connection ID 'postgres_db' for task execution.
[2022-11-23T13:00:02.723+1300] {sql.py:315} INFO - Running statement: 

CREATE TABLE IF NOT EXISTS logs.landing_table (
    site character(50),
    start_timestamp timestamp without time zone,
    end_timestamp timestamp without time zone,
    id integer NOT NULL
);
ALTER TABLE logs.landing_table OWNER TO admin;

--
-- TOC entry 220 (class 1259 OID 32904)
-- Name: landing_table_id_seq; Type: SEQUENCE; Schema: logs; Owner: admin
--

CREATE SEQUENCE IF NOT EXISTS logs.landing_table_id_seq
    AS integer
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1;

-- Empty out the table before copying from csv.
TRUNCATE LOGS.landing_table;

do $$ 

DECLARE 
single_filepath varchar [];
csv_file_names varchar[] := array['/Users/hirenpatel/airflow/csv_batch_files/task_1_logs_batch_2.csv', '/Users/hirenpatel/airflow/csv_batch_files/task_1_logs_batch_3.csv', '/Users/hirenpatel/airflow/csv_batch_files/task_1_logs_batch_1.csv'];

BEGIN

    --foreach single_filepath in array csv_file_names 
    foreach single_filepath in ARRAY csv_file_names
    LOOP    
        COPY logs.landing_table("site", "start_timestamp", "end_timestamp")
        FROM single_filepath
        DELIMITER ','
        CSV HEADER;
    END LOOP;
    RETURN;
END; $$



, parameters: None
[2022-11-23T13:00:02.734+1300] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "single_filepath"
LINE 39:         FROM single_filepath
                      ^

[2022-11-23T13:00:02.748+1300] {taskinstance.py:1401} INFO - Marking task as FAILED. dag_id=load_kpi_view_dag, task_id=create_landing_table, execution_date=20221122T000000, start_date=20221123T000002, end_date=20221123T000002
[2022-11-23T13:00:02.760+1300] {standard_task_runner.py:100} ERROR - Failed to execute job 41 for task create_landing_table (syntax error at or near "single_filepath"
LINE 39:         FROM single_filepath
                      ^
; 16830)
[2022-11-23T13:00:02.767+1300] {local_task_job.py:164} INFO - Task exited with return code 1
[2022-11-23T13:00:02.843+1300] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
